UI FIX: font/bg particles z-index

--- a/src/assets/particles.css
+++ b/src/assets/particles.css
@@ -4,6 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 1;
   overflow: hidden;
 }
 
@@ -13,6 +14,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 1;
   overflow: hidden;
 }
 #stars {
