--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -42,7 +42,7 @@
   gap: 30px;
   text-align: center;
   color: black !important;
-
+  z-index: 10;
   width: 90%;
   max-width: 750px;
   padding: 16px;
@@ -114,7 +114,7 @@
 
 .heading {
   font-size: 2.7rem;
-  font-family: "Madimi One", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 600;
   text-align: center;
   margin-bottom: 30px;
@@ -122,7 +122,7 @@
 
 .sub-heading {
   font-size: 1.5rem;
-  font-family: "Madimi One", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
   text-align: center;
 }
@@ -181,6 +181,7 @@
   margin: auto;
   text-align: center;
   margin-top: 0;
+  z-index: 10;
 }
 
 .navbar {
